# otel-cli-rs

./: Cargo.toml  NOTES.md  README.md
otel-arrow/: README.md  fake-parquet-azure.yaml  fake-parquet-s3.yaml  gen_config.py  otlp-parquet-s3.yaml  query_s3.py  send_telemetry.py
otel-cli-rs/: Cargo.toml
otel-cli-rs/src/: main.rs
src/: error.rs  main.rs  metrics.rs  ui.rs
