[package]
name = "otel-dashboard"
version = "0.1.0"
edition = "2021"
description = "CLI tool to receive OpenTelemetry data and visualize it"

[dependencies]
opentelemetry-proto = { version = "0.5", features = ["gen-tonic", "metrics"] }
tonic = "0.11"
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.26.0"
crossterm = "0.27.0"
